<resources>
    <string name="app_name">EMRC Triaget_tpe</string>
    <string name="main_ms">Select Mode</string>
    <string name="main_Triage">Triage</string>
    <string name="main_Command">Command</string>
    <string name="main_Transport">Transport</string>
    <string name="info_title">Identification</string>
    <string name="info_name">Name:</string>
    <string name="info_age">Age:</string>
    <string name="info_number">SSN:</string>
    <string name="info_gender">Gender:</string>
    <string name="info_male">M</string>
    <string name="info_femal">F</string>
    <string name="info_unknow">\?</string>
    <string name="info_ps">Picture ID or headshot</string>
    <string name="info_hint">Allergy history, medication\nor treatment</string>
    <string name="info_other">Note:</string>
    <string name="inju_title_1">Front</string>
    <string name="inju_title_2">Back</string>
    <string name="vita_title_1">Vital Signs-1</string>
    <string name="vita_title_2">Vital Signs-2</string>
    <string name="vita_title_3">Vital Signs-3</string>
    <string name="vita_time">Time</string>
    <string name="vita_time_hint">00:00</string>
    <string name="vita_bp">BP</string>
    <string name="vita_bp_hint">12080</string>
    <string name="vita_pulse">HR</string>
    <string name="vita_pulse_hint">80</string>
    <string name="vita_respiration">RR</string>
    <string name="vita_respiration_hint">20</string>
    <string name="vita_spo2">SpO2</string>
    <string name="vita_spo2_hint">100</string>
    <string name="vita_gcs">CSNS</string>
    <string name="vita_gcs_hint">Normal</string>
    <string name="vita_date">date</string>
    <string name="vita_evm">GCS</string>
    <string name="vita_other">Others</string>
    <string name="leve_title">Triage</string>
    <string name="leve_morgue_int">Level 0</string>
    <string name="leve_morgue">MORGUE</string>
    <string name="leve_immediate_int">Level 1</string>
    <string name="leve_immediate">IMMEDIATE</string>
    <string name="leve_delayed_int">Level 2</string>
    <string name="leve_delayed">DELAYED</string>
    <string name="leve_minor_int">Level 3</string>
    <string name="leve_minor">MINOR</string>
    <string name="phot_title">Injury Photography</string>
    <string name="emrgn_title">Treatments</string>
    <string name="emrc_title">Simple Triage</string>
    <string name="mediCar_phone">Phone:</string>
    <string name="mediCar_unit">Unit Name:</string>
    <string name="mediCar_license">License Plate:</string>
    <string name="id_000000">Jake</string>
    <string name="id_000001">18</string>
    <string name="id_000002">男</string>
    <string name="id_000003">..</string>
    <string name="id_000004">Offline</string>
    <string name="id_000005">2017/7/7　07:07 下午</string>
    <string name="id_000006">This App Has Expired!\n</string>
    <string name="id_000007">Please change to the correct date!</string>
    <string name="id_000008">運送傷患>開啟導航功能\n抵達醫院>清除傷患資訊</string>
    <string name="s_EMRC_00">No head.</string>
    <string name="s_EMRC_01">Pulseless for over 20 min\n(non -drowning or non -hypothermia).</string>
    <string name="s_EMRC_02">Body Severing Injury.</string>
    <string name="s_EMRC_03">Fall from height multiple \nfracture,non observable \nbreathing.</string>
    <string name="s_EMRC_04">Organ exposure.</string>
    <string name="s_EMRC_10">Apnea or Airway obstruction.</string>
    <string name="s_EMRC_11">RR >30 breaths/min.</string>
    <string name="s_EMRC_12">Pulseless Radial pulse.</string>
    <string name="s_EMRC_13">Unable to follow command,\nconscious unclear.</string>
    <string name="s_EMRC_14">Cardiac arrest.</string>
    <string name="s_EMRC_15">Arterial laceration,\nUnstoppable Bleeding</string>
    <string name="s_EMRC_16">Steady of the neck injury.</string>
    <string name="s_EMRC_17">Severe Head Injury with low \nof consciousness</string>
    <string name="s_EMRC_18">Trauma resulting in open \nchest or abdominal wound.</string>
    <string name="s_EMRC_19">CRT longer than 2 sec.</string>
    <string name="s_EMRC_20">Back injury.</string>
    <string name="s_EMRC_21">Less than 2 bleeding wounds\n(Moderate bleeding).</string>
    <string name="s_EMRC_22">Severe Burns.</string>
    <string name="s_EMRC_23">Open  fracture or multiple fractures.</string>
    <string name="s_EMRC_24">Abdominal trauma.</string>
    <string name="s_EMRC_25">Eye injury.</string>
    <string name="s_EMRC_26">Stable Medicines poisoning.</string>
    <string name="s_EMRGN_00">Airway Management</string>
    <string name="s_EMRGN_01">Oropharyngeal Airway</string>
    <string name="s_EMRGN_02">Nasopharyngeal Airway</string>
    <string name="s_EMRGN_03">Suction</string>
    <string name="s_EMRGN_04">Nasal Cannula|l/min</string>
    <string name="s_EMRGN_05">Mask|l/min</string>
    <string name="s_EMRGN_041">Nasal Cannula</string>
    <string name="s_EMRGN_051">Mask</string>
    <string name="s_EMRGN_06">Non Rebreather Mask</string>
    <string name="s_EMRGN_07">Nebulizer Mask</string>
    <string name="s_EMRGN_08">Bag Valve Mask Resuscitator</string>
    <string name="s_EMRGN_09">Intubating LMA/ILMA|</string>
    <string name="s_EMRGN_091">Intubating LMAILMA</string>
    <string name="s_EMRGN_10">Endotracheal Tube</string>
    <string name="s_EMRGN_11">Heimlich Maneuver</string>
    <string name="s_EMRGN_12">Trauma Care</string>
    <string name="s_EMRGN_13">Extrication Collar</string>
    <string name="s_EMRGN_14">Irrigation the wound</string>
    <string name="s_EMRGN_15">Cover the wound</string>
    <string name="s_EMRGN_16">Splint Fix</string>
    <string name="s_EMRGN_17">Spinal Board</string>
    <string name="s_EMRGN_18">Scoop Stretcher</string>
    <string name="s_EMRGN_19">Kendrick Extrication Device</string>
    <string name="s_EMRGN_20">Cardiopulmonary Resuscitation</string>
    <string name="s_EMRGN_21">CPR by pedestrian|min</string>
    <string name="s_EMRGN_22">CPR by EMT|min</string>
    <string name="s_EMRGN_211">CPR by pedestrian</string>
    <string name="s_EMRGN_221">CPR by EMT</string>
    <string name="s_EMRGN_23">Use the PAED</string>
    <string name="s_EMRGN_24">Use the AED</string>
    <string name="s_EMRGN_25">Shock|times</string>
    <string name="s_EMRGN_251">Shock</string>
    <string name="s_EMRGN_26">No Shock Advised</string>
    <string name="s_EMRGN_27">Medicines Management</string>
    <string name="s_EMRGN_28">IV Solution</string>
    <string name="s_EMRGN_29">Using Oral Glucose</string>
    <string name="s_EMRGN_30">Recommend using sublingual NTG</string>
    <string name="s_EMRGN_31">Recommend using Bronchodilator</string>
    <string name="s_EMRGN_32">Other</string>
    <string name="s_EMRGN_33">Keep warm</string>
    <string name="s_EMRGN_34">Psychological Help and Support</string>
    <string name="s_EMRGN_35">Lift up the Bed and lower extremity</string>
    <string name="s_EMRGN_36">Only Measuring Vital Signs</string>
    <string name="s_EMRGN_37">Labor Support</string>
    <string name="s_EMRGN_38">Advanced Life Support</string>
    <string name="s_Menu_1">Basic Identification</string>
    <string name="s_Menu_2">Treatments</string>
    <string name="s_Menu_3">Injury Location</string>
    <string name="s_Menu_4">Vital Signs</string>
    <string name="s_Menu_5">Triage</string>
    <string name="s_Menu_6">Injury Photography</string>
    <string name="s_Menu_7">Attendance</string>
    <string name="s_Menu_8">Arrive scene</string>
    <string name="s_Menu_9">Leave scene</string>
    <string name="s_Menu_10">Arrive hospital</string>
    <string name="s_Menu_11">Leave hospital</string>
    <string name="s_Menu_12">Standby</string>
    <string name="s_Menu_13">Cancel</string>
    <string name="s_Menu_14">Refuse</string>
    <string name="s_Menu_15">Video</string>
    <string name="s_Menu_16">GPS</string>
    <string name="s_Menu_17">Call Emergency</string>
    <string name="s_Menu_18">Call Police</string>
    <string name="s_Menu_19">Ambulance Status:</string>
    <string name="s_Menu_20">Unauthenticated</string>
    <string name="s_List_0">Triage Record</string>
    <string name="s_List_1">Transport Record</string>
    <string name="s_List_2">Patients List</string>
    <string name="s_List_3"></string>
    <string name="s_List_4"></string>
    <string name="s_List_5"></string>
    <string name="s_List_6">has been Transported</string>
    <string name="s_List_7">yet to be Transported</string>
    <string name="s_List_8">Status</string>
    <string name="s_List_9">Alert</string>
    <string name="s_List_10">Verbal</string>
    <string name="s_List_11">Pain</string>
    <string name="s_List_12">Unresponsive</string>
    <string name="s_List_13">Others</string>
    <string name="s_List_14">No Signs of Life</string>
    <string name="s_List_15">Carotid pulse can not be palpated</string>
    <string name="s_List_16">Radial pulse  can not be palpated</string>
    <string name="s_List_17">Unable to be measured</string>
    <string name="s_List_18">MORGUE</string>
    <string name="s_List_19">IMMEDIATE</string>
    <string name="s_List_20">DELAYED</string>
    <string name="s_List_21">MINOR</string>
    <string name="s_List_22">null</string>
    <string name="s_List_23">Head</string>
    <string name="s_List_24">Chest</string>
    <string name="s_List_25">Abdomen</string>
    <string name="s_List_26">Left-thigh</string>
    <string name="s_List_27">Right-thigh</string>
    <string name="s_List_28">Left-lower leg</string>
    <string name="s_List_29">Righ-lower leg</string>
    <string name="s_List_30">Left-upper arm</string>
    <string name="s_List_31">Right-upper arm</string>
    <string name="s_List_32">Left-foream</string>
    <string name="s_List_33">Right-foream</string>
    <string name="s_List_34">Left-hand</string>
    <string name="s_List_35">Right-hand</string>
    <string name="s_List_36">Back</string>
    <string name="s_List_37">Back Waist</string>
    <string name="s_List_38">Not yet</string>
    <string name="gcs_e">Eye</string>
    <string name="gcs_v">Verbal</string>
    <string name="gcs_m">Motor</string>
    <string name="gcs_List_00">Eye</string>
    <string name="gcs_List_01">Opens eyes spontaneously</string>
    <string name="gcs_List_02">Opens eyes in response to voice</string>
    <string name="gcs_List_03">Opens eyes in response to painful stimuli</string>
    <string name="gcs_List_04">Does not open eyes</string>
    <string name="gcs_List_10">Verbal</string>
    <string name="gcs_List_11">Oriented, converses normally</string>
    <string name="gcs_List_12">Confused, disoriented</string>
    <string name="gcs_List_13">Utters incoherent words</string>
    <string name="gcs_List_14">Incomprehensible sounds</string>
    <string name="gcs_List_15">Makes no sounds</string>
    <string name="gcs_List_20">Motor</string>
    <string name="gcs_List_21">Obeys commands</string>
    <string name="gcs_List_22">Localizes to painful stimuli</string>
    <string name="gcs_List_23">Flexion / Withdrawal to painful stimuli</string>
    <string name="gcs_List_24">Abnormal flexion to painful stimuli</string>
    <string name="gcs_List_25">Extension to painful stimuli</string>
    <string name="gcs_List_26">Makes no movements</string>
    <string name="s_H">Hospital</string>
    <string name="s_H_Tainan_1">NCKU Hospital</string>
    <string name="s_H_Tainan_2">Chi-Mei Hospital</string>
    <string name="s_H_Tainan_3">Liouying Chi-Mei Hospital</string>
    <string name="s_H_Tainan_4">Chiali Chi-Mei Hospital</string>
    <string name="s_H_Tainan_5">Tainan Municipal Hospital</string>
    <string name="s_H_Tainan_6">Tainan State Hospital</string>
    <string name="s_H_Tainan_7">Tainan General Hospital</string>
    <string name="s_H_Tainan_8">Tainan Sin-lau Hospital</string>
    <string name="s_H_Tainan_9">Madou Sin-Lau Hospital</string>
    <string name="s_H_Tainan_10">Kuo General Hospital</string>
</resources>