<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/TopLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/leve_title"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@drawable/gray_baseline" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/MidLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/TopLinearLayout"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/leve_item_0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/leve_item_0_int"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_weight="2"
                    android:singleLine="true"
                    android:text="@string/leve_morgue_int"
                    android:textColor="@color/gray_dr"
                    android:textSize="30sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/leve_item_0_morgue"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/leve_morgue"
                    android:textColor="@color/black"
                    android:textSize="40sp" />
            </TableRow>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/gray_baseline2"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/leve_item_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/leve_item_1_int"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_weight="2"
                    android:singleLine="true"
                    android:text="@string/leve_immediate_int"
                    android:textColor="@color/gray_dr"
                    android:textSize="30sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/leve_item_1_immediate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/leve_immediate"
                    android:textColor="@color/black"
                    android:textSize="40sp" />
            </TableRow>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/gray_baseline2"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/leve_item_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/leve_item_2_int"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_weight="2"
                    android:singleLine="true"
                    android:text="@string/leve_delayed_int"
                    android:textColor="@color/gray_dr"
                    android:textSize="30sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/leve_item_2_delayed"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/leve_delayed"
                    android:textColor="@color/black"
                    android:textSize="40sp" />
            </TableRow>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/gray_baseline2"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/leve_item_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/leve_item_3_int"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_weight="2"
                    android:singleLine="true"
                    android:text="@string/leve_minor_int"
                    android:textColor="@color/gray_dr"
                    android:textSize="30sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/leve_item_3_minor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/leve_minor"
                    android:textColor="@color/black"
                    android:textSize="40sp" />
            </TableRow>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/gray_baseline2"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/leve_no_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/id_000004"
        android:textColor="@color/red"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,RelativeOverlap" />

    <TextView
        android:id="@+id/leve_no_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/id_000004"
        android:textColor="@color/red"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/leve_check"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/fs_check_1"
        tools:ignore="ContentDescription,RtlHardcoded" />

</RelativeLayout>